<resources>
    <string name="app_name">Transmissampa</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="textview_sign_in">Sign in</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="action_logout">Logout</string>
    <string name="textview_login">Log in</string>
    <string name="title_activity_log_in">Login</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="email">e-mail</string>
    <string name="confirm_password">confirm password</string>
    <string name="agree_terms_conditions">Agree with terms and conditions.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login">LOGIN</string>
    <string name="progress_login_title">Please wait ...</string>
    <string name="progress_login_text">Trying to login</string>
    <string name="progress_sing_in_title">Please wait...</string>
    <string name="progress_sing_in_text">Trying to sign in</string>
    <string name="title_activity_add_event">Add Event</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_broadcast">BroadcastActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_events_data">Nothing to show.</string>
    <string name="progress_event_list_title">Loading...</string>
    <string name="progress_event_list_text">Loading Event List</string>
    <string name="title_activity_view_event">View Event</string>


    <string name="start">Start/Stop Streaming</string>
    <string name="flash">Flash</string>
    <string name="camera">Camera</string>
    <string name="video">Video Settings</string>
    <string name="save">OK</string>
    <string name="uri">URI</string>
    <string name="password_hint">Leave empty if not needed</string>
    <string name="username_hint">Leave empty if not needed</string>
    <string name="default_bitrate">0 kbps</string>
    <string name="default_stream">rtsp://wowzaipaddress:1935/live/test.stream</string>
</resources>
