<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="me.biuti.transmissampa.controller.SignInActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:gravity="center_horizontal"
        android:paddingTop="25dp">

        <EditText
            android:layout_width="@dimen/sign_up_fields"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etName"
            android:layout_centerHorizontal="true"
            android:hint="@string/name"/>

        <EditText
            android:layout_width="@dimen/sign_up_fields"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail"
            android:layout_below="@+id/etName"
            android:layout_centerHorizontal="true"
            android:hint="@string/email"/>

        <EditText
            android:layout_width="@dimen/sign_up_fields"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername"
            android:layout_below="@+id/etEmail"
            android:layout_centerHorizontal="true"
            android:hint="@string/username"/>

        <EditText
            android:layout_width="@dimen/sign_up_fields"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:layout_below="@+id/etUsername"
            android:layout_centerHorizontal="true"
            android:hint="@string/password"/>

        <EditText
            android:layout_width="@dimen/sign_up_fields"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etConfirmPassword"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:hint="@string/confirm_password"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_terms_conditions"
            android:id="@+id/checkBox"
            android:checked="false"
            android:layout_below="@+id/etConfirmPassword"
            android:layout_centerHorizontal="true"/>

        <android.support.v7.widget.CardView
            android:id="@+id/elevated_button_card"
            card_view:cardElevation="2dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            card_view:cardMaxElevation="8dp"
            card_view:contentPadding="-2dp"
            card_view:cardCornerRadius="0dp"
            android:layout_below="@+id/checkBox"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp">
            <Button
                android:id="@+id/btnSignIn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sign_in"
                android:clickable="true"
                android:background="@drawable/button_shape"
                android:textColor="@color/text"/>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
