<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="me.biuti.transmissampa.controller.LogInActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:gravity="center">

        <EditText
            android:layout_width="@dimen/login_fields"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername"
            android:hint="@string/username"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="@dimen/login_fields"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:layout_below="@+id/etUsername"
            android:layout_centerHorizontal="true"/>

        <android.support.v7.widget.CardView
            android:id="@+id/elevated_button_card"
            card_view:cardElevation="2dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            card_view:cardMaxElevation="8dp"
            card_view:contentPadding="-2dp"
            card_view:cardCornerRadius="0dp"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp">
            <Button
                android:id="@+id/btnLogIn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:clickable="true"
                android:background="@drawable/button_shape"
                android:textColor="@color/text"/>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</RelativeLayout>
